add JS functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,15 @@
   background-color: #c2f0c2;
 }
 
-#displayContact {
+#show-contact {
   display: none;
+}
+
+#contacts {
+  cursor: pointer;
+  color: #0088cc;
+}
+
+#contacts:hover {
+  text-decoration: underline;
 }
